Fix pasting two factor code [VPNWIN-2759]

--- a/src/Client/ProtonVPN.Client/UI/Login/Pages/TwoFactorPageView.xaml
+++ b/src/Client/ProtonVPN.Client/UI/Login/Pages/TwoFactorPageView.xaml
@@ -95,7 +95,7 @@ along with ProtonVPN.  If not, see <https://www.gnu.org/licenses/>.
                      GotFocus="OnGotFocus"
                      KeyDown="OnDigitBoxKeyDown"
                      MaxLength="1"
-                     Paste="OnPaste"
+                     Paste="OnPasteAsync"
                      Style="{StaticResource TwoFactorNumberBox}"
                      TextAlignment="Center"
                      TextChanged="OnDigitChanged" />
@@ -108,7 +108,7 @@ along with ProtonVPN.  If not, see <https://www.gnu.org/licenses/>.
                      GotFocus="OnGotFocus"
                      KeyDown="OnDigitBoxKeyDown"
                      MaxLength="1"
-                     Paste="OnPaste"
+                     Paste="OnPasteAsync"
                      Style="{StaticResource TwoFactorNumberBox}"
                      TextAlignment="Center"
                      TextChanged="OnDigitChanged" />
@@ -121,7 +121,7 @@ along with ProtonVPN.  If not, see <https://www.gnu.org/licenses/>.
                      GotFocus="OnGotFocus"
                      KeyDown="OnDigitBoxKeyDown"
                      MaxLength="1"
-                     Paste="OnPaste"
+                     Paste="OnPasteAsync"
                      Style="{StaticResource TwoFactorNumberBox}"
                      TextAlignment="Center"
                      TextChanged="OnDigitChanged" />
@@ -142,7 +142,7 @@ along with ProtonVPN.  If not, see <https://www.gnu.org/licenses/>.
                      GotFocus="OnGotFocus"
                      KeyDown="OnDigitBoxKeyDown"
                      MaxLength="1"
-                     Paste="OnPaste"
+                     Paste="OnPasteAsync"
                      Style="{StaticResource TwoFactorNumberBox}"
                      TextAlignment="Center"
                      TextChanged="OnDigitChanged" />
@@ -155,7 +155,7 @@ along with ProtonVPN.  If not, see <https://www.gnu.org/licenses/>.
                      GotFocus="OnGotFocus"
                      KeyDown="OnDigitBoxKeyDown"
                      MaxLength="1"
-                     Paste="OnPaste"
+                     Paste="OnPasteAsync"
                      Style="{StaticResource TwoFactorNumberBox}"
                      TextAlignment="Center"
                      TextChanged="OnDigitChanged" />
@@ -169,7 +169,7 @@ along with ProtonVPN.  If not, see <https://www.gnu.org/licenses/>.
                      GotFocus="OnGotFocus"
                      KeyDown="OnDigitBoxKeyDown"
                      MaxLength="1"
-                     Paste="OnPaste"
+                     Paste="OnPasteAsync"
                      Style="{StaticResource TwoFactorNumberBox}"
                      TextAlignment="Center"
                      TextChanged="OnDigitChanged" />
