--- a/src/Client/ProtonVPN.Client/UI/Dialogs/DebugTools/DebugToolsShellView.xaml
+++ b/src/Client/ProtonVPN.Client/UI/Dialogs/DebugTools/DebugToolsShellView.xaml
@@ -145,9 +145,22 @@ along with ProtonVPN.  If not, see <https://www.gnu.org/licenses/>.
                                   Style="{StaticResource DefaultSettingsCardStyle}">
 
                     <StackPanel Orientation="Horizontal"
-                            Spacing="8">
+                                Spacing="8">
                         <Button Command="{x:Bind ViewModel.DisconnectWithSessionLimitReachedErrorCommand, Mode=OneTime}"
                                 Content="Session limit reached for plus user"
+                                Style="{StaticResource PrimaryButtonStyle}" />
+                    </StackPanel>
+
+                </toolkit:SettingsCard>
+
+                <toolkit:SettingsCard Header="Show NPS survey"
+                                      IsTabStop="False"
+                                      Style="{StaticResource DefaultSettingsCardStyle}">
+
+                    <StackPanel Orientation="Horizontal"
+                                Spacing="8">
+                        <Button Command="{x:Bind ViewModel.ShowNpsSurveyCommand, Mode=OneTime}"
+                                Content="Show"
                                 Style="{StaticResource PrimaryButtonStyle}" />
                     </StackPanel>
 
