--- a/src/Client/ProtonVPN.Client/UI/Main/FeatureIcons/KillSwitchIconView.xaml
+++ b/src/Client/ProtonVPN.Client/UI/Main/FeatureIcons/KillSwitchIconView.xaml
@@ -21,15 +21,26 @@ along with ProtonVPN.  If not, see <https://www.gnu.org/licenses/>.
 <UserControl x:Class="ProtonVPN.Client.UI.Main.FeatureIcons.KillSwitchIconView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:custom="using:ProtonVPN.Client.Common.UI.Controls.Custom"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="using:ProtonVPN.Client.UI.Main.FeatureIcons"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:custom="using:ProtonVPN.Client.Common.UI.Controls.Custom"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:pathIcons="using:ProtonVPN.Client.Common.UI.Assets.Icons.PathIcons"
              x:DefaultBindMode="OneWay"
              mc:Ignorable="d">
 
-    <custom:DimmableImage IconSource="{x:Bind ViewModel.Icon}"
-                          IsDimmed="{x:Bind ViewModel.IsDimmed}"
-                          Width="{x:Bind Width}"
-                          Height="{x:Bind Height}"/>
+    <Grid>
+
+        <custom:DimmableImage IconSource="{x:Bind ViewModel.Icon}"
+                              IsDimmed="{x:Bind ViewModel.IsDimmed}"
+                              Width="{x:Bind Width}"
+                              Height="{x:Bind Height}" />
+
+        <pathIcons:ExclamationTriangleFilled Margin="0,-8,-8,0"
+                                             HorizontalAlignment="Right"
+                                             VerticalAlignment="Top"
+                                             Foreground="{ThemeResource SignalWarningColorBrush}"
+                                             Size="Pixels16"
+                                             Visibility="{x:Bind ViewModel.IsDisconnectedAndAdvancedKillSwitchActive}" />
+    </Grid>
 </UserControl>
