--- a/src/Client/Common/ProtonVPN.Client.Common.UI/Styles/Controls/ButtonStyles.xaml
+++ b/src/Client/Common/ProtonVPN.Client.Common.UI/Styles/Controls/ButtonStyles.xaml
@@ -60,6 +60,11 @@ along with ProtonVPN.  If not, see <https://www.gnu.org/licenses/>.
             <StaticResource x:Key="ButtonBorderBrushPressed" ResourceKey="BorderWeakColorBrush" />
             <StaticResource x:Key="ButtonBorderBrushDisabled" ResourceKey="BorderWeakColorBrush" />
 
+            <!--  Disruptive Secondary Button Brushes  -->
+
+            <StaticResource x:Key="DisruptiveButtonBackgroundPointerOver" ResourceKey="InteractionWeakDangerHoverColorBrush" />
+            <StaticResource x:Key="DisruptiveButtonBackgroundPressed" ResourceKey="InteractionWeakDangerActiveColorBrush" />
+
             <!--  Tertiary Button Brushes  -->
 
             <StaticResource x:Key="TertiaryButtonBackground" ResourceKey="BackgroundNormColorBrush" />
@@ -115,6 +120,11 @@ along with ProtonVPN.  If not, see <https://www.gnu.org/licenses/>.
             <StaticResource x:Key="ButtonBorderBrushPressed" ResourceKey="BorderWeakColorBrush" />
             <StaticResource x:Key="ButtonBorderBrushDisabled" ResourceKey="BorderWeakColorBrush" />
 
+            <!--  Disruptive Secondary Button Brushes  -->
+
+            <StaticResource x:Key="DisruptiveButtonBackgroundPointerOver" ResourceKey="InteractionWeakDangerHoverColorBrush" />
+            <StaticResource x:Key="DisruptiveButtonBackgroundPressed" ResourceKey="InteractionWeakDangerActiveColorBrush" />
+
             <!--  Tertiary Button Brushes  -->
 
             <StaticResource x:Key="TertiaryButtonBackground" ResourceKey="BackgroundNormColorBrush" />
@@ -159,6 +169,112 @@ along with ProtonVPN.  If not, see <https://www.gnu.org/licenses/>.
     </Style>
 
     <Style x:Key="LargeSecondaryButtonStyle" BasedOn="{StaticResource SecondaryButtonStyle}" TargetType="Button">
+        <Setter Property="Padding" Value="{StaticResource LargeButtonPadding}" />
+        <Setter Property="FontSize" Value="{StaticResource BodyMediumStrongFontSize}" />
+        <Setter Property="FontWeight" Value="{StaticResource BodyMediumStrongFontWeight}" />
+    </Style>
+
+    <Style x:Key="DisruptiveSecondaryButtonStyle" BasedOn="{StaticResource SecondaryButtonStyle}" TargetType="Button">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <ContentPresenter xmlns:local="using:Microsoft.UI.Xaml.Controls"
+                                  x:Name="ContentPresenter"
+                                  Padding="{TemplateBinding Padding}"
+                                  HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                  VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
+                                  local:AnimatedIcon.State="Normal"
+                                  AutomationProperties.AccessibilityView="Raw"
+                                  Background="{TemplateBinding Background}"
+                                  BackgroundSizing="{TemplateBinding BackgroundSizing}"
+                                  BorderBrush="{TemplateBinding BorderBrush}"
+                                  BorderThickness="{TemplateBinding BorderThickness}"
+                                  Content="{TemplateBinding Content}"
+                                  ContentTemplate="{TemplateBinding ContentTemplate}"
+                                  ContentTransitions="{TemplateBinding ContentTransitions}"
+                                  CornerRadius="{TemplateBinding CornerRadius}"
+                                  Foreground="{TemplateBinding Foreground}">
+                        <ContentPresenter.BackgroundTransition>
+                            <BrushTransition Duration="0:0:0.083" />
+                        </ContentPresenter.BackgroundTransition>
+
+                        <VisualStateManager.VisualStateGroups>
+                            <VisualStateGroup x:Name="CommonStates">
+
+                                <VisualState x:Name="Normal" />
+
+                                <VisualState x:Name="PointerOver">
+                                    <Storyboard>
+                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ContentPresenter"
+                                                                   Storyboard.TargetProperty="Background">
+                                            <DiscreteObjectKeyFrame KeyTime="0"
+                                                                Value="{ThemeResource DisruptiveButtonBackgroundPointerOver}" />
+                                        </ObjectAnimationUsingKeyFrames>
+                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ContentPresenter"
+                                                                   Storyboard.TargetProperty="BorderBrush">
+                                            <DiscreteObjectKeyFrame KeyTime="0"
+                                                                Value="{ThemeResource ButtonBorderBrushPointerOver}" />
+                                        </ObjectAnimationUsingKeyFrames>
+                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ContentPresenter"
+                                                                   Storyboard.TargetProperty="Foreground">
+                                            <DiscreteObjectKeyFrame KeyTime="0"
+                                                                Value="{ThemeResource ButtonForegroundPointerOver}" />
+                                        </ObjectAnimationUsingKeyFrames>
+                                    </Storyboard>
+                                </VisualState>
+
+                                <VisualState x:Name="Pressed">
+                                    <Storyboard>
+                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ContentPresenter"
+                                                                   Storyboard.TargetProperty="Background">
+                                            <DiscreteObjectKeyFrame KeyTime="0"
+                                                                Value="{ThemeResource DisruptiveButtonBackgroundPressed}" />
+                                        </ObjectAnimationUsingKeyFrames>
+                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ContentPresenter"
+                                                                   Storyboard.TargetProperty="BorderBrush">
+                                            <DiscreteObjectKeyFrame KeyTime="0"
+                                                                Value="{ThemeResource ButtonBorderBrushPressed}" />
+                                        </ObjectAnimationUsingKeyFrames>
+                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ContentPresenter"
+                                                                   Storyboard.TargetProperty="Foreground">
+                                            <DiscreteObjectKeyFrame KeyTime="0"
+                                                                Value="{ThemeResource ButtonForegroundPressed}" />
+                                        </ObjectAnimationUsingKeyFrames>
+                                    </Storyboard>
+                                </VisualState>
+
+                                <VisualState x:Name="Disabled">
+                                    <Storyboard>
+                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ContentPresenter"
+                                                                   Storyboard.TargetProperty="Background">
+                                            <DiscreteObjectKeyFrame KeyTime="0"
+                                                                Value="{ThemeResource ButtonBackgroundDisabled}" />
+                                        </ObjectAnimationUsingKeyFrames>
+                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ContentPresenter"
+                                                                   Storyboard.TargetProperty="BorderBrush">
+                                            <DiscreteObjectKeyFrame KeyTime="0"
+                                                                Value="{ThemeResource ButtonBorderBrushDisabled}" />
+                                        </ObjectAnimationUsingKeyFrames>
+                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ContentPresenter"
+                                                                   Storyboard.TargetProperty="Foreground">
+                                            <DiscreteObjectKeyFrame KeyTime="0"
+                                                                Value="{ThemeResource ButtonForegroundDisabled}" />
+                                        </ObjectAnimationUsingKeyFrames>
+                                    </Storyboard>
+                                </VisualState>
+
+                            </VisualStateGroup>
+
+                        </VisualStateManager.VisualStateGroups>
+                    </ContentPresenter>
+
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+
+    <Style x:Key="LargeDisruptiveSecondaryButtonStyle" BasedOn="{StaticResource DisruptiveSecondaryButtonStyle}" TargetType="Button">
         <Setter Property="Padding" Value="{StaticResource LargeButtonPadding}" />
         <Setter Property="FontSize" Value="{StaticResource BodyMediumStrongFontSize}" />
         <Setter Property="FontWeight" Value="{StaticResource BodyMediumStrongFontWeight}" />
